# nelnet_tracker

./: .gitignore  CHANGELOG.md  README.adoc  TODO.adoc  cspell.json  main.py  pyproject.toml
nelnet_tracker/: cli.py  config.py  database.py  nelnet_tracker.py  plot.py  scrape.py
util/: dev.py
