[tool.poetry]
name = "nelnet-tracker"
version = "0.2.4"
description = "Tracks status of loans on nelnet."
authors = ["n8jhj <nathaniel-j-jones@proton.me>"]
license = "MIT"
readme = "README.adoc"
packages = [{ include = "nelnet_tracker" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
selenium = "^4.14.0"
platformdirs = "^3.11.0"
click = "^8.1.7"
matplotlib = "^3.8.1"
numpy = "^1.26.1"

[tool.poetry.scripts]
nelnet-tracker = "nelnet_tracker.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
